--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ big {
 /* Elements
 --------------------------------------------- */
 body {
-  background: #ddd;
+  background: #fff;
 }
 
 hr {
@@ -937,29 +937,7 @@ textarea {
 
 /* Mon site
 --------------------------------------------- */
-.site-branding {
-  font-family: arial;
-}
-
-.site-branding .site-title {
-  font-size: 8em;
-  margin: 0;
-  padding: 0;
-  /* .site-title a */
-}
-
-.site-branding .site-title a {
-  color: #ec6d12;
-}
-
-.site-branding .site-description {
-  margin: 0;
-  padding: 0;
-  font-size: 2em;
-}
-
-.site {
-  margin: 0 auto;
-  width: 80%;
+.site-title {
+  font-size: 10em;
 }
 /*# sourceMappingURL=style.css.map */
