--- a/sass/mon-site/_entete.scss
+++ b/sass/mon-site/_entete.scss
@@ -1,5 +1,6 @@
 .site-branding {
   font-family : arial;
+  line-height : 1.2;
 .site-title {
     font-size: 8em;
     margin : 0;
@@ -14,7 +15,7 @@
 .site-description {
     margin : 0;
     padding : 0;
-    font-size : 2em;
+    font-size : 1.5em;
  
 }
 }
