--- a/style.css
+++ b/style.css
@@ -939,6 +939,7 @@ textarea {
 --------------------------------------------- */
 .site-branding {
   font-family: arial;
+  line-height: 1.2;
 }
 
 .site-branding .site-title {
@@ -955,7 +956,7 @@ textarea {
 .site-branding .site-description {
   margin: 0;
   padding: 0;
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 .site {
