--- a/sass/mon-site/_entete.scss
+++ b/sass/mon-site/_entete.scss
@@ -1,6 +1,7 @@
 .site-branding {
   font-family : arial;
   line-height : 1.2;
+  
 .site-title {
     font-size: 8em;
     margin : 0;
@@ -16,6 +17,6 @@
     margin : 0;
     padding : 0;
     font-size : 1.5em;
- 
+    color : $color__site-title;
 }
 }
